<resources>


    <string name="app_name">Citas Medicas</string>
    <string name="user">Usuario</string>
    <string name="correo">Correo</string>
    <string name="pass">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrar">Registrarse</string>
    <string name="cedula">Cedula</string>

    <string name="nombre">Nombre</string>
    <string name="login">Iniciar sesión</string>
    <string name="registro">Registrarse</string>
    <string name="asignar">Asignar</string>


    <string name="especialista">Especialista</string>
    <string name="eps">Eps</string>
    <string name="fecha">Seleccionar fecha</string>
    <string name="asignarCita">Asignar cita</string>
    <string name="consultarCita">Consultar citas</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="asignarFecha">Selecciona la fecha</string>
</resources>
